# Weave

./: .gitignore  CLAUDE.md  KAGGLE_STATUS.md  README.md  RESULTS.md  RUNPOD_STATUS.md  STATUS.md  go.mod  go.sum  pyproject.toml  related_works.md  train_modal.py  weave_final.bib  weave_final.tex
LaTexPackage-1/: fig1.tex  weave.tex
dataset/: aggregate.py  builder.go  generate_programs.py  import_gobench.py  prepare_finetuning.py  prepare_trajectory.py  schema.go  train_lora.py  train_lora_kl.py  train_lora_trajectory.py  train_lora_unsloth.py
downloaded_papers/: 01_cwm_text.txt  02_debugcwm_text.txt  03_exectuning_text.txt  04_codeexec_text.txt  05_concur_text.txt  06_jainpurandare_text.txt  07_goker_text.txt  08_gobench_text.txt  09_gcatch_text.txt  10_gfuzz_text.txt  11_gopie_text.txt  12_hinton_text.txt  13_diffuse_text.txt  14_guocalib_text.txt  15_probcalib_text.txt  16_spiess_text.txt  17_lora_text.txt  18_qlora_text.txt  19_qwen_text.txt  20_flanagan2002_text.txt
eval/: dirichlet_analysis.py  dist_zero_shot.py  gemini_zeroshot_goker.py  generate_paper_figures.py  inference_check.py  kaggle_eval.py  phase18_analysis.py  simulation_rollout.py  zero_shot.go
instrumented/: chan.go  log.go  mutex.go
programs/: 01_simple_channel.go  02_multiple_goroutines.go  03_mutex_counter.go  04_deadlock.go  05_race_condition.go  06_channel_select.go  07_worker_pool.go  08_pipeline.go  09_timeout_pattern.go  10_channel_close.go  11_waitgroup.go  12_once.go  13_buffered_channel.go  14_goroutine_leak.go  15_fan_in.go  16_http_handler_leak.go  17_ticker_leak.go  (+132 more)
(+88 files in other folders)
